tests/machine/x/zig/fun_expr_in_let.error
Error on line 7: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/fun_expr_in_let.zig:7:23: error: expected ',' after initializer

6:     square = fn (x: i32) i32 {
7:         return (x * x);
8: };
